--- a/app/src/components/Chat/Chat.css
+++ b/app/src/components/Chat/Chat.css
@@ -1,3 +1,44 @@
-.messages {
-    flex-grow: 2;
+.chat-msgs {
+    overflow-x: clip;
+    overflow-y: auto;
+    margin-top: auto;
 }
+
+.chat {
+    flex-grow: 2;
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
+}
+
+.msg-block {
+    padding: 14px;
+    background-color: white;
+    color: black;
+    margin-left: 14px;
+    margin-right: auto;
+    float: left;
+    clear: both;
+    margin-bottom: 14px;
+    border-radius: 10px;
+    text-align: left;
+    font-size: 18px;
+    max-width: 700px;
+    overflow-wrap:break-word;
+}
+
+.msg-author {
+    margin: unset;
+    font-weight: 600;
+}
+
+.curUserTrue {
+    float: right;
+    margin-left: auto;
+    margin-right: 14px;
+}
+
+.msg-text {
+    margin: unset;
+}
+
