--- a/app/src/components/ChatList/ChatList.css
+++ b/app/src/components/ChatList/ChatList.css
@@ -9,9 +9,16 @@
 }
 
 .addChat-container {
-    position: sticky;
+    position: absolute;
+    transform: translateY(0);
     z-index: 3;
-    bottom: 100px;
+    bottom: 0;
+    left: 500px;
+    transition: transform .25s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+.chatList:hover .addChat-container {
+    transform: translateY(-100px);
 }
 
 .addChat-btn {
@@ -19,4 +26,21 @@
     height: 56px;
     width: 56px;
     right: 14px;
+    border-radius: 50%;
+    background-color: #4a95d6;
+    cursor: pointer;
+    border: none;
+}
+
+.pencil {
+    color: white;
+    font-size: 20px;
+}
+
+.addChat-menu {
+    top: -70px !important;
+    left: -150px;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
 }
