--- a/app/src/components/SignForm/SignForm.css
+++ b/app/src/components/SignForm/SignForm.css
@@ -5,12 +5,45 @@
 }
 
 .login-input {
-    margin-bottom: 14px;
+    margin-bottom: 18px;
+    border: 2px solid lightgray;
+    padding: 14px;
+}
+
+.login-input:focus {
+    border: 2px solid gray;
+}
+
+.login-input:last-of-type {
+    margin: unset;
 }
 
 .login-label {
     color: black;
-    text-transform: uppercase;
     margin-bottom: 8px;
     margin-right: auto;
+    font-size: 18px;
+    font-weight: 550;
+}
+
+.login-text {
+    font-size: 16px;
+    margin: 4px auto 0 0;
+    color: black;
+}
+
+.login-link {
+    color: black;
+    font-weight: 550;
+    margin-left: 4px;
+}
+
+.login-btn {
+    margin-top: 18px;
+    height: 46px;
+    color: white;
+    background-color: #1d2939;
+    border-radius: 10px;
+    border: none;
+    font-size: 18px;
 }
